testdata/trans/error/try-outside-func/err.go
package foo

import (
	"fmt"
)

var n = try(fmt.Println("hello"))
